--- a/.github/workflows/gh-pages.yaml
+++ b/.github/workflows/gh-pages.yaml
@@ -23,11 +23,13 @@ jobs:
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
-        node-version: ${{ matrix.node-version }}
-    #- run: npm install -g yarn    
+        node-version: ${{ matrix.node-version }} 
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
+
+    - name: Create cname file
+      run: echo 'unamenu.com' > public/CNAME
 
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
