--- a/.github/workflows/gh-pages.yaml
+++ b/.github/workflows/gh-pages.yaml
@@ -20,6 +20,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+
+    - name: Clean public directory
+      run: rm -rf public
+
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
