--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "unamenu",
   "version": "0.1.0",
+  "homepage": "https:/www.unamenu.com",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
