added back build

--- a/.github/workflows/gh-pages.yaml
+++ b/.github/workflows/gh-pages.yaml
@@ -32,7 +32,7 @@ jobs:
       run: npm run test
 
     - name: Create cname file
-      run: echo 'www.unamenu.com' > public/CNAME      
+      run: echo 'www.unamenu.com' > build/CNAME      
 
     - name: Upload production-ready build files
       uses: actions/upload-artifact@v2
