added back build

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "unamenu",
   "version": "0.1.0",
+  "homepage": "https://www.unamenu.com/",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.3",
